Added the assert to compare byte[]